<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".pages.dash_board.filter.DashBoardFilterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
            tools:ignore="VectorDrawableCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:background="@drawable/list_item_background"
        android:layout_marginTop="@dimen/margin_5"
        android:id="@+id/most_sale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.store.stock.bookstore.base_ui.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/choose"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size_2" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="center_vertical"
            android:text="@string/most_sale"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_3" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:background="@drawable/list_item_background"
        android:id="@+id/news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.store.stock.bookstore.base_ui.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/choose"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size_2" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="center_vertical"
            android:text="@string/news"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:background="@drawable/list_item_background"
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.store.stock.bookstore.base_ui.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/choose"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size_2" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="center_vertical"
            android:text="@string/book_name_order"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_marginStart="@dimen/margin_2"
        android:background="@drawable/list_item_background"
        android:id="@+id/publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.book.store.stock.bookstore.base_ui.CustomTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_2"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/choose"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/text_size_2" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/margin_8"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="center_vertical"
            android:text="@string/publisher_order"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_3" />

    </LinearLayout>


</LinearLayout>
</layout>