<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.order.OrderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stock"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.book.store.stock.bookstore.base_ui.CustomEditText
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:layout_constraintLeft_toRightOf="@id/search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/search"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:padding="@dimen/margin_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_search_24"
            tools:ignore="VectorDrawableCompat" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="right"
            android:text="@string/address"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="right"
            android:text="@string/phone"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_4"
            android:gravity="right"
            android:text="@string/fax"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>