<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".pages.authentication.login.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_icon"
        tools:ignore="VectorDrawableCompat" />

    <com.book.store.stock.bookstore.base_ui.CustomTextInputLayout
        android:id="@+id/code_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_11"
        android:layout_marginEnd="@dimen/margin_4"
        android:hint="@string/user_code"
        android:layoutDirection="rtl"
        android:textColorHint="@color/grayDark"
        android:textDirection="rtl"
        app:errorEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon">

        <com.book.store.stock.bookstore.base_ui.CustomTextInput
            android:id="@+id/code_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:clickable="true"
            android:maxLength="4"
            android:gravity="right"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@id/username_edit"
            android:paddingStart="@dimen/margin_3"
            android:paddingTop="@dimen/margin_4"
            android:paddingEnd="@dimen/margin_3"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grayDark"
            android:textSize="@dimen/text_size_2"
            tools:ignore="RtlSymmetry" />

    </com.book.store.stock.bookstore.base_ui.CustomTextInputLayout>

    <com.book.store.stock.bookstore.base_ui.CustomTextInputLayout
        android:id="@+id/username_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_4"
        android:hint="@string/user_name"
        android:layoutDirection="rtl"
        android:textColorHint="@color/grayDark"
        android:textDirection="rtl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/code_edit_layout">

        <com.book.store.stock.bookstore.base_ui.CustomTextInput
            android:maxLength="20"
            android:id="@+id/username_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:clickable="true"
            android:gravity="right"
            android:inputType="textNoSuggestions"
            android:nextFocusDown="@id/password_edit"
            android:paddingStart="@dimen/margin_3"
            android:paddingTop="@dimen/margin_4"
            android:paddingEnd="@dimen/margin_3"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grayDark"
            android:textSize="@dimen/text_size_2"
            tools:ignore="RtlSymmetry" />

    </com.book.store.stock.bookstore.base_ui.CustomTextInputLayout>

    <com.book.store.stock.bookstore.base_ui.CustomTextInputLayout
        android:id="@+id/password_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_4"
        android:hint="@string/password"
        android:layoutDirection="rtl"
        android:textColorHint="@color/grayDark"
        android:textDirection="rtl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_edit_layout">

        <com.book.store.stock.bookstore.base_ui.CustomTextInput
            android:maxLength="25"
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:clickable="true"
            android:gravity="right"
            android:inputType="textPassword"
            android:paddingStart="@dimen/margin_3"
            android:paddingTop="@dimen/margin_4"
            android:paddingEnd="@dimen/margin_3"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/grayDark"
            android:textSize="@dimen/text_size_2"
            tools:ignore="RtlSymmetry" />

    </com.book.store.stock.bookstore.base_ui.CustomTextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_3"
        app:layout_constraintBottom_toBottomOf="@id/password_edit_layout"
        app:layout_constraintLeft_toLeftOf="@id/password_edit_layout"
        app:layout_constraintTop_toTopOf="@id/password_edit_layout"
        app:srcCompat="@drawable/ic_baseline_visibility_24"
        tools:ignore="VectorDrawableCompat" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.book.store.stock.bookstore.base_ui.CustomButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_4"
        android:layout_marginTop="@dimen/margin_7"
        android:layout_marginEnd="@dimen/margin_4"
        android:background="@drawable/button_default"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_layout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button">

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:id="@+id/forget_pass"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="@dimen/margin_3"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_2"
            android:text="@string/forget_password"/>

        <com.book.store.stock.bookstore.base_ui.CustomTextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:padding="@dimen/margin_1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_3"/>

        <com.book.store.stock.bookstore.base_ui.CustomTextView
            android:id="@+id/register"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_3"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_2"
            android:text="@string/register"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>